First update of Permission rework